final bits of the sueprprojects and some bug fixes

--- a/planetary_diversity_rework/localisation/english/planetarydiversity_ascension_worlds_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_ascension_worlds_l_english.yml
@@ -151,7 +151,7 @@
 
 ###Infesting Hive
  building_pd_planet_infester_1: "Infestation Node - First Phase"
- building_pd_planet_infester_1_desc: This node, the heart of the initial infestation stage, is vital to the hive's presence on this planet. Its loss would unravel the hive's grip here.ME"
+ building_pd_planet_infester_1_desc: "This node, the heart of the initial infestation stage, is vital to the hive's presence on this planet. Its loss would unravel the hive's grip here."
  building_pd_planet_infester_2: "Infestation Node - Second Phase"
  building_pd_planet_infester_2_desc: "This massive node, now in the intermediate infestation stage, wields a connection to the hive robust enough to manipulate critical planetary processes. Its loss would unravel the hive's grip here."
  building_pd_planet_infester_3: "Planetary Infestation Node"
@@ -160,3 +160,5 @@
  pdplanetaryinfesters.120.name: "Planetary Hive Complete"
  pdplanetaryinfesters.120.desc: "As the node reaches its full potential, we resonate with a profound sense of accomplishment.\n\nThis moment marks a significant leap in the hive's conrol of [Root.GetName], solidifying its grasp over the planet."
  pdplanetaryinfesters.120.a: "Another home for the hive."
+ civic_hive_pd_planetary_infesters: "Planetary Infesters"
+ civic_hive_pd_planetary_infesters_desc: "This hive mind embeds itself into a planet's ecosystems. Each world becomes an extension of itself, flourishing as a unified network under its guidance."
