final bit of domed colonies and russian translation

--- a/planetary_diversity_exotics/localisation/russian/pd_exotics_l_russian.yml
+++ b/planetary_diversity_exotics/localisation/russian/pd_exotics_l_russian.yml
@@ -8,6 +8,7 @@
  ammonia_terraforming_candidate_desc: "Несмотря на то, что это замёрзший бесплодный мир, на котором отсутствует жизни, он мог бы стать домом для многих экосистем. При использовании правильных технологий его можно было бы терраформировать в пригодный для жизни мир."
  sulfur_terraforming_candidate: "Кандидат на терраформирование в Сернистый мир"
  sulfur_terraforming_candidate_desc: "Несмотря на то, что это замёрзший бесплодный мир, на котором отсутствует жизни, он мог бы стать домом для многих экосистем. При использовании правильных технологий его можно было бы терраформировать в пригодный для жизни мир."
+  
   #July 22 Rogue World Update 
  origin_pd_rogue_voidfarers: "Блуждающие в Пустоте"
  origin_pd_rogue_voidfarers_desc: "Эта цивилизация эволюционировала на блуждающей планете, которая была выброшена своей родной звездой и скиталась по космосу, пока в конце концов не была захвачена скоплением чёрных дыр. Её плотная атмосфера удерживает тепло от геологически активной поверхности делая планету пригодной для жизни."
@@ -20,11 +21,12 @@
  rogue_void_architecture_desc: "Наши знания о пустоте позволяют создавать улучшенные орбитали."
  decision_pd_rogue_better_habs: "Архитектура в пустоте"
  decision_pd_rogue_better_habs_desc: "Мы используем наши знания о пустоте, чтобы расширить орбитали."
+  
   #Aug Odds and Ends 
  opinion_pd_roguebh_a_primitive_world: "Блуждающая примитивная планета"
  opinion_pd_roguebh_a_primitive_world_phile: "Блуждающая примитивная планета"
  tech_rogue_star_collapsing: "Тёмная материя для коллапсирования звёзд"
-tech_rogue_star_collapsing_desc: "Используя тёмную материю, мы можем запустить процесс коллапса звезды, этот тонкий и легко прерываемый процесс позволит создать Чёрную дыру, на её орбите появятся планеты, которые в последствии мы сможем превратить, в так необходимые нам блуждающие мuniиры."
+ tech_rogue_star_collapsing_desc: "Используя тёмную материю, мы можем запустить процесс коллапса звезды, этот тонкий и легко прерываемый процесс позволит создать Чёрную дыру, на её орбите появятся планеты, которые в последствии мы сможем превратить, в так необходимые нам блуждающие миры."
  decision_pd_rogue_collapse_star: "Коллапс звезды"
  decision_pd_rogue_collapse_star_desc: "Использование тёмной материи для коллапса звезды, это очень чувствительный процесс, поэтому он не пригоден для военного применения, он необходим лишь для превращения звезды в §YЧёрную дыру§!."
  pdroguestarcollapse: "Коллапсирующая звезда"
@@ -32,6 +34,7 @@ tech_rogue_star_collapsing_desc: "Используя тёмную материю
  decision_pd_rogue_collapse_star_effects: "Под воздействием тёмной материи, эта звезда будет превращена в Черную дыру. Радиоактивные осадки лишат планеты большей части их атмосферы и сделают любые пригодные для жизни миры - непригодными, что позволит впоследствии терраформировать их в блуждающие миры."
  pc_rogue_gas_giant: "Блуждающий газовый гигант"
  pc_rogue_gas_giant_desc: "Газообразная планета с атмосферой, состоящей в основном из водорода и гелия, окружающей плотное ядро. Эта планеты попала под действие гравитации Чёрной дыры и теперь вращается вокруг неё."
+  
   #Sept 22 Hycean World 
  origin_pd_hycean_aquatic: "Обитатели глубин гикеана"
  origin_pd_hycean_aquatic_desc: "Эта цивилизация развивалась на Мире-гикеане, гигантской водной планета с высоким давлением, температурой поверхности почти под 200 градусов по Цельсию и атмосферой, состоящей в основном из водорода. Местные формы жизни не смогут существовать в других мирах."
@@ -67,14 +70,17 @@ tech_rogue_star_collapsing_desc: "Используя тёмную материю
  decision_expand_hycean_sea_desc: "Гекианическое море - наш дом, а в доме всегда не хватает места. Наши сети по добыче льда позволяют нам собирать его на других небесных тел и перемещать в океаны [This.GetName], расширяя тем самым необходимые для жизни территорий на планете."
  pd_hycean_start_init_NAME: "Стартовый мир"
  pd_hycean_start_init_DESC: "Одна большая планета соседствует с двумя кандидатами на терраформирование."
+  
   #Gas Dwarf 
  pc_dwarf_gas_giant: "Газовый гигант"
  pc_dwarf_gas_giant_desc: "Газообразная планета с атмосферой, состоящей в основном из водорода и гелия, окружающих плотное ядро. У него плотная водородно-гелиевая атмосфера с глубокими слоями льда, горных пород или жидких океанов состоящих из воды и аммиака."
  hycean_terraforming_candidate: "Кандидат на терраформирование в Мир-гекиана"
  hycean_terraforming_candidate_desc: "Хотя этот газовый гигант бесплоден и лишён жизни, в нём есть всё необходимое для жизни. При наличии правильной технологии его можно было бы преобразовать в Мир-гекиана."
+  
   #Rogue Hole World Notification 
  MESSAGE_ROGUEHOLE: "$PLANET|Y$ коллапсировав, превратилась в §YЧёрную дыру§!, изменив количество планет в этой Солнечной системе."
  MESSAGE_ROGUEHOLE_MESSAGE_TYPE_TITLE: "Успешный коллапс звезды"
+  
   #Exotic Buildings Rework 
  building_ash_grid: "Вулканическая энергетическая сеть"
  building_ash_grid_desc: "Изобилие активных вулканов на этой планете позволяет улучшить выработку энергии."
@@ -100,6 +106,7 @@ tech_rogue_star_collapsing_desc: "Используя тёмную материю
  pd_building_acid_rock_desc: "Агрессивная природа этого мира способствует появлению легкодоступных залежей минералов."
  pd_building_acid_research: "Отдел исследований"
  pd_building_acid_research_desc: "Уникальные формы жизни и инженерные разработки, необходимые для борьбы с кислотностью, делают эту планету очень интересной."
+  
   #3.6 Nov Update 
  sulfur_terraforming_candidate_for_others: "Кандидат на терраформирование в Сернистый мир"
  sulfur_terraforming_candidate_for_others_desc: "Несмотря на то, что это токсичный бесплодный мир, на котором отсутствует жизни, он мог бы стать домом для экосистем основанных на сере."
