--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -33,6 +33,24 @@
  mod_pc_pd_domed_colony_toxic_habitability: "Placehold/Should not see."
  trait_pc_pd_domed_colony_toxic_preference: "Placehold/Should not see."
  trait_pc_pd_domed_colony_toxic_preference_desc: "Placehold/Should not see."
+ pc_pd_domed_colony_superhabitable: "Superhabitable Domed Colony"
+ pc_pd_domed_colony_superhabitable_desc: "Barren and rocky superhabitable world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and utterly devoid of life. Domed colonies have been built on the surface, allowing for permanent habitation."
+ pc_pd_domed_colony_superhabitable_adj: "$pc_pd_domed_colony_barren_adj$"
+ mod_pc_pd_domed_colony_superhabitable_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_superhabitable_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_superhabitable_preference_desc: "Placehold/Should not see."
+ pc_pd_domed_colony_tidally_locked: "Tidally Locked Domed Colony"
+ pc_pd_domed_colony_tidally_locked_desc: "Barren and rocky tidally locked world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and utterly devoid of life. Domed colonies have been built on the surface, allowing for permanent habitation."
+ pc_pd_domed_colony_tidally_locked_adj: "$pc_pd_domed_colony_barren_adj$"
+ mod_pc_pd_domed_colony_tidally_locked_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_tidally_locked_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_tidally_locked_preference_desc: "Placehold/Should not see."
+ pc_pd_domed_colony_cave: "Cavern Domed Colony"
+ pc_pd_domed_colony_cave_desc: "Barren and rocky cavern world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and utterly devoid of life. Domed colonies have been built on the surface, allowing for permanent habitation."
+ pc_pd_domed_colony_cave_adj: "$pc_pd_domed_colony_barren_adj$"
+ mod_pc_pd_domed_colony_cave_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_cave_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_cave_preference_desc: "Placehold/Should not see."
 
 #Modifiers
  hab_terraforming_candidate:0 "Terraforming Candidate"
@@ -62,4 +80,6 @@
 
 #Technology
  tech_pd_domed_colonies: "Domed Habitation"
- tech_pd_domed_colonies_desc: ""
+ tech_pd_domed_colonies_desc: "Technological advancements could now make it feasible to establish domed colonies on previously inhospitable planetary frontiers."
+ allow_domed_colonies:0 "§HUnlocks Megastructures:§! §YDomed Colonies§! and §YDomed Habitats§!"
+ allow_domed_colonies_DETAILS:0 "This will allow the construction of Domed Colonies and Habitats on some unihabitable worlds."
