more work on domes

--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -9,6 +9,7 @@
  requires_correct_planet_class: "$TRIGGER_FAIL$Planet Class must support Domed Colony construction."
 
 #Planet Classes
+ #Colonies
  pc_pd_domed_colony_barren: "Barren Domed Colony"
  pc_pd_domed_colony_barren_desc: "Barren and rocky world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and utterly devoid of life. Domed colonies have been built on the surface, allowing for permanent habitation."
  pc_pd_domed_colony_barren_adj: "domed"
@@ -51,12 +52,25 @@
  mod_pc_pd_domed_colony_cave_habitability: "Placehold/Should not see."
  trait_pc_pd_domed_colony_cave_preference: "Placehold/Should not see."
  trait_pc_pd_domed_colony_cave_preference_desc: "Placehold/Should not see."
+ #Habitats
+ pc_pd_domed_habitat_barren_cold: "Barren Domed Habitat"
+ pc_pd_domed_habitat_barren_cold_desc: "$pc_pd_domed_colony_barren_desc$"
+ pc_pd_domed_habitat_barren_cold_adj: "$pc_pd_domed_colony_barren_adj$"
+ mod_pc_pd_domed_habitat_barren_cold_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_habitat_barren_cold_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_habitat_barren_cold_preference_desc: "Placehold/Should not see."
 
 #Modifiers
  hab_terraforming_candidate:0 "Terraforming Candidate"
  hab_terraforming_candidate_desc:0 "Though barren and devoid of life, this planet has water in frozen form and may once have been home to a thriving ecosystem. With the right technology, it could be terraformed into a habitable world."
  pd_domed_colony: "Domed Colony"
  pd_domed_colony_desc: "The colony's residents thrive under an advanced network of protective domes, shielding them from the planet's inhospitable conditions. While offering safety, these structures demand high maintenance and expansion costs."
+ pd_domed_habitat: "Domed Habitat"
+ pd_domed_habitat_desc: "The colony's residents thrive under an advanced network of protective domes, shielding them from the planet's inhospitable conditions. While offering safety, these structures demand high maintenance and expansion costs."
+ pd_domed_moonbase: "Moonbase Site"
+ pd_domed_moonbase_desc: "This moon is a potential site for a Domed Habitat, as long as a planet in the solar system is colonized."
+ pd_domed_moonbase_shown: "$pd_domed_moonbase$"
+ pd_domed_moonbase_shown_desc: "$pd_domed_moonbase_shown$"
 
 #Deposits
  d_phab_energy_1:0 "Radioactive Isotopes"
@@ -77,9 +91,31 @@
  d_phab_food_2_desc:0 "Scattered phosphorus deposits on this planet could be vital for transforming its terrain into fertile grounds for food production post-terraforming."
  d_phab_food_3:0 "Potassium Deposit"
  d_phab_food_3_desc:0 "Scattered potassium deposits on this planet could be vital for transforming its terrain into fertile grounds for food production post-terraforming."
+ d_pd_habitat_research: "Research Base"
+ d_pd_habitat_research_desc: "Capitalizing on the research potential here, a research base has been established within the domed habitat."
+ d_pd_habitat_mining: "Mining Base"
+ d_pd_habitat_mining_desc: "Capitalizing on the rich mineral deposits here, a mining base has been established within the domed habitat."
+ d_pd_habitat_energy: "Generator Base"
+ d_pd_habitat_energy_desc: "Capitalizing on the energy potential here, a generator base has been established within the domed habitat."
 
 #Technology
  tech_pd_domed_colonies: "Domed Habitation"
  tech_pd_domed_colonies_desc: "Technological advancements could now make it feasible to establish domed colonies on previously inhospitable planetary frontiers."
  allow_domed_colonies:0 "§HUnlocks Megastructures:§! §YDomed Colonies§! and §YDomed Habitats§!"
  allow_domed_colonies_DETAILS:0 "This will allow the construction of Domed Colonies and Habitats on some unihabitable worlds."
+
+#Domed Habitats
+ pd_domed_base_0: "Build Domed Habitat"
+ pd_domed_base_0_DESC: "Though lifeless and barren, this planet holds vast economic potential, justifying the construction of a permanent domed habitat to tap into its untapped resources."
+ pd_domed_base_0_MEGASTRUCTURE_DETAILS: "A §YDomed Habitat§! is a collection of self-sustaining planetside habitation domes on an uninhabitable planet."
+
+#Districts
+ district_hab_science_uncapped: "$district_hab_science$"
+ district_hab_science_uncapped_desc: "$district_hab_science_desc$"
+ district_hab_science_uncapped_plural: "$district_hab_science_plural$"
+ district_hab_energy_uncapped: "$district_hab_energy$"
+ district_hab_energy_uncapped_desc: "$district_hab_energy_desc$"
+ district_hab_energy_uncapped_plural: "$district_hab_energy_plural$"
+ district_hab_mining_uncapped: "$district_hab_mining$"
+ district_hab_mining_uncapped_desc: "$district_hab_mining_desc$"
+ district_hab_mining_uncapped_plural: "$district_hab_mining_plural$"
