fixes and removed moonbases

--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -8,6 +8,12 @@
  requires_terraforming_candidate: "$TRIGGER_FAIL$Must have a Terraforming Candidate modifier."
  requires_correct_planet_class: "$TRIGGER_FAIL$Planet Class must support Domed Colony construction."
 
+#Missing Vanilla Tooltips
+ mod_job_trader_per_pop: "§G+1§! £job_trader£ $job_trader$ Job per $VALUE$ Pops"
+ mod_job_trader_per_pop_short: "\n§G+1§! £job_trader£ per $VALUE$ £pop£"
+ mod_job_angler_per_pop:0 "§G+1§! £job_angler£ $job_angler$ Job per $VALUE$ Pops"
+ mod_job_angler_per_pop_short:0 "\n§G+1§! £mod_job_angler_add£ per $VALUE$ £pop£"
+
 #Planet Classes
  #Colonies
  pc_pd_domed_colony_barren: "Barren Domed Colony"
@@ -53,12 +59,6 @@
  trait_pc_pd_domed_colony_cave_preference: "Placehold/Should not see."
  trait_pc_pd_domed_colony_cave_preference_desc: "Placehold/Should not see."
  #Habitats
- pc_pd_domed_habitat_barren_cold: "Barren Domed Habitat"
- pc_pd_domed_habitat_barren_cold_desc: "$pc_pd_domed_colony_barren_desc$"
- pc_pd_domed_habitat_barren_cold_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_habitat_barren_cold_habitability: "Placehold/Should not see."
- trait_pc_pd_domed_habitat_barren_cold_preference: "Placehold/Should not see."
- trait_pc_pd_domed_habitat_barren_cold_preference_desc: "Placehold/Should not see."
 
 #Modifiers
  hab_terraforming_candidate:0 "Terraforming Candidate"
@@ -92,11 +92,35 @@
  d_phab_food_3:0 "Potassium Deposit"
  d_phab_food_3_desc:0 "Scattered potassium deposits on this planet could be vital for transforming its terrain into fertile grounds for food production post-terraforming."
  d_pd_habitat_research: "Research Base"
- d_pd_habitat_research_desc: "Capitalizing on the research potential here, a research base has been established within the domed habitat."
+ d_pd_habitat_research_desc: "A research base has been established within the domed habitat, capitalizing on the research potential here."
  d_pd_habitat_mining: "Mining Base"
- d_pd_habitat_mining_desc: "Capitalizing on the rich mineral deposits here, a mining base has been established within the domed habitat."
+ d_pd_habitat_mining_desc: "A mining base has been established within the domed habitat, capitalizing on the rich mineral deposits here."
  d_pd_habitat_energy: "Generator Base"
- d_pd_habitat_energy_desc: "Capitalizing on the energy potential here, a generator base has been established within the domed habitat."
+ d_pd_habitat_energy_desc: "A generator base has been established within the domed habitat, capitalizing on the energy potential here."
+ d_pd_habitat_research_tooltip: "Unlocks §Y$district_hab_science_uncapped_plural$§! on this Domed Habitat."
+ d_pd_habitat_mining_tooltip: "Unlocks §Y$district_hab_mining_uncapped_plural$§! on this Domed Habitat."
+ d_pd_habitat_energy_tooltip: "Unlocks §Y$district_hab_energy_uncapped_plural$§! on this Domed Habitat."
+ moonbase_all: "A domed base has been constructed on this planet's moon."
+ d_pd_moon_base_trade: "Trade Moon Base"
+ d_pd_moon_base_trade_desc: "$moonbase_all$"
+ d_pd_moon_base_military: "Military Moon Base"
+ d_pd_moon_base_military_desc: "$moonbase_all$"
+ d_pd_moon_base_factory: "Factory Moon Base"
+ d_pd_moon_base_factory_desc: "$moonbase_all$"
+ d_pd_moon_base_foundry: "Foundry Moon Base"
+ d_pd_moon_base_foundry_desc: "$moonbase_all$"
+ d_pd_moon_base_admin: "Admin Moon Base"
+ d_pd_moon_base_admin_desc: "$moonbase_all$"
+ d_pd_moon_base_priest: "Ecclesiastical Moon Base"
+ d_pd_moon_base_priest_desc: "$moonbase_all$"
+ d_pd_moon_base_research: "Research Moon Base"
+ d_pd_moon_base_research_desc: "$moonbase_all$"
+ d_pd_moon_base_energy: "Generator Moon Base"
+ d_pd_moon_base_energy_desc: "$moonbase_all$"
+ d_pd_moon_base_mining: "Mining Moon Base"
+ d_pd_moon_base_mining_desc: "$moonbase_all$"
+ d_pd_moon_base_food: "Hydroponics Moon Base"
+ d_pd_moon_base_food_desc: "$moonbase_all$"
 
 #Technology
  tech_pd_domed_colonies: "Domed Habitation"
