--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -123,7 +123,7 @@
  d_phab_food_3:0 "Potassium Deposit"
  d_phab_food_3_desc:0 "Scattered potassium deposits on this planet could be vital for transforming its terrain into fertile grounds for food production post-terraforming."
  d_pd_solar_system_network_hub: "Intrasolar Network Hub"
- d_pd_solar_system_network_hub_desc: "This hub is a vital link for this solar system's planetary Domed Bases. While the bases offer employment and accommodation, the central colony provides essential supplies and resources to sustain the operations."
+ d_pd_solar_system_network_hub_desc: "This hub is a vital link for this solar system's planetary domed outposts. While the bases offer employment and accommodation, the central colony provides essential supplies and resources to sustain the operations."
 
 #Technology
  tech_pd_domed_colonies: "Domed Habitation"
@@ -157,3 +157,12 @@
  pddomebases.100.admin.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetAdministratorWithIcon] on connected colonies."
  pddomebases.100.priest: "Ecclesiastical Moon Base"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
+
+#Origin
+ origin_pd_interplanetary_settlers: "Interplanetary Settlers"
+ origin_pd_interplanetary_settlers_desc: "Before the stars were reachable, this empire laid its foundations, erecting domed habitats across the moons and planets of their home system. Now, armed with FTL technology, they stand on the brink of a new era, ready to expand their reach into the uncharted realms of space."
+ origin_tooltip_pd_interplanetary_settlers_start_effects: "TODO, get dem domes!"
+ pd_interplanetary_system_initializer_NAME:0 "Random Domed System"
+ pd_interplanetary_system_initializer_DESC:0 "Random start system with one Domed Colony and one Domed Base."
+ pd_interplanetary_sol_system_initializer_NAME:0 "Sol Domed System"
+ pd_interplanetary_sol_system_initializer_DESC:0 "Sol start system with one Domed Colony and one Domed Base."
