concept and tooltipwork

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -3,12 +3,21 @@
 #Origin
  origin_pd_aw_tree_of_life: "Megaflora Tree of Life"
  origin_pd_aw_tree_of_life_desc:0 "This Hive evolved in a symbiotic relationship with a vast megaflora tree whose roots have spread to every corner of the planet and changed the ecosystem to suit both it and the drones. The hive would be hard-pressed to survive without the support of the tree."
- origin_tooltip_pd_aw_tree_of_life_start_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_tree_of_life']$TABBED_NEW_LINE$- ['concept_pd_aw_tree_of_life_class']$NEW_LINE$- Colonized Planets: ['concept_pd_aw_tree_of_life_sapling'] Planetary Feature$NEW_LINE$- Colonies without the §YTree of Life Sapling§!: ['concept_transplant_pd_aw_tree_of_life'] Planetary Decision$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] on Subject colonies"
-  origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "- Cannot terraform planets"
- 
-#Concepts
+ origin_tooltip_pd_aw_tree_of_life_start_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- Planetary Feature: ['concept_tree_of_life']$TABBED_NEW_LINE$- Planetary Modifiers: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Colonized Planets:$TABBED_NEW_LINE$- Planetary Feature: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Colonies without the §YTree of Life Sapling§!:$TABBED_NEW_LINE$- Planetary Decision: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] on Subject colonies"
+ origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "- Cannot terraform planets"
+
+ #Concepts
  concept_pd_aw_tree_of_life: "$d_tree_of_life_home$"
  concept_pd_aw_tree_of_life_desc: "- $MOD_POP_GROWTH_SPEED$: §G+15%§!\n- $mod_planet_jobs_society_research_produces_mult$: §G+10%§!\n- $MOD_PLANET_HOUSING_ADD$: §G+10§!\n- $mod_district_farming_max$: §G+4§!\n- Upkeep: 4 $i_food$\n\n§L$d_tree_of_life_home_desc$§!"
+ concept_pd_aw_tree_of_life_modifier: "$pd_aw_tree_of_life_home$"
+ concept_pd_aw_tree_of_life_modifier_desc: "- Unlocks ['concept_generator_district', £district£ $district_generator_plural$]$NEW_LINE$- Unlocks ['concept_mining_district', £district£ $district_mining_plural$]$NEW_LINE$- Unlocks ['concept_farming_district', £district£ $district_farming_plural$]\n\n§L$pd_aw_tree_of_life_home_desc$§!"
+ concept_pd_aw_tree_of_life_sapling: "$d_pd_aw_tree_of_life_colony$"
+ concept_pd_aw_tree_of_life_sapling_desc: "- $MOD_POP_GROWTH_SPEED$: §G+10%§!\n- $mod_planet_jobs_society_research_produces_mult$: §G+10%§!\n- $MOD_PLANET_HOUSING_ADD$: §G+5§!\n- $mod_district_farming_max$: §G+2§!\n- Upkeep: 20 $i_food$\n- $MOD_PLANET_MAX_DISTRICTS_ADD$: §R-1§!\n\n§L$d_tree_of_life_colony_desc$§!"
+ concept_transplant_pd_aw_tree_of_life: "$decision_pd_replant_aw_tree_of_life$"
+ concept_transplant_pd_aw_tree_of_life_desc: "Replants the Tree of Life on this world.\n\n§L$decision_pd_replant_aw_tree_of_life_desc$§!"
+ concept_pd_aw_tree_of_life_holding: "$holding_tree_of_life_sapling$"
+ concept_pd_aw_tree_of_life_holding_desc: "- $MOD_MONTHLY_LOYALTY_GAIN$: §G+1§!\n- $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!\n- £food£ Food from £job_farmer£ ['concept_farmer']: §G+1§!\n- £mod_job_ranger_add£ ['concept_overlord_arborist', $job_overlord_arborist$] Jobs: §G+1§!\n\n§L$holding_tree_of_life_sapling_desc$§!"
+
 
 #Deposits
  d_pd_aw_tree_of_life_home:0 "Tree of Life"
@@ -39,7 +48,7 @@
 #Start Text
  START_SCREEN_PD_TREE_OF_LIFE: "When we awoke, we served the Tree, and the Tree served us. We care for the Tree, we feed the Tree, we protect the Tree, and the Tree nurtures us. For the Tree's sake, we spread out over [GetHomeWorldName], planting and watching offshoots of the Tree wherever we went.\n\nOur world has served the Tree for centuries, and yet we fear the Tree is not entirely safe as we have learned about the dangers of the universe. We have long known this is not the only planet; the galaxy has many Treeless worlds, and we yearn to change this.\n\nWe must protect the Tree. The Tree must spread. The Tree must grow."
 
-#Modifiers 
+#Modifiers
  pd_aw_tree_of_life_bloomed: "Bloomed Tree of Life World"
  pd_aw_tree_of_life_bloomed: "The Great Tree on this planet has fully matured and is in bloom. Its enormous root system provides space for extra worker drones and can withstand considerable damage."
  pd_aw_tree_of_life_growing: "Growing Tree of Life Sapling"
