--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -127,7 +127,7 @@
 
 #Technology
  tech_pd_domed_colonies: "Domed Habitation"
- tech_pd_domed_colonies_desc: "Technological advancements could now make it feasible to establish domed colonies on previously inhospitable planetary frontiers."
+ tech_pd_domed_colonies_desc: "Technological advancements make it feasible to establish domed colonies on previously inhospitable planetary frontiers."
  allow_domed_colonies:0 "§HUnlocks Megastructures:§! §YDomed Colonies§! and §YDomed Bases§!"
  allow_domed_colonies_DETAILS:0 "This technology will allow the construction of Domed Colonies and Bases on some uninhabitable worlds."
 
@@ -161,8 +161,18 @@
 #Origin
  origin_pd_interplanetary_settlers: "Interplanetary Settlers"
  origin_pd_interplanetary_settlers_desc: "Before the stars were reachable, this empire laid its foundations, erecting domed habitats across the moons and planets of their home system. Now, armed with FTL technology, they stand on the brink of a new era, ready to expand their reach into the uncharted realms of space."
- origin_tooltip_pd_interplanetary_settlers_start_effects: "TODO, get dem domes!"
+ origin_tooltip_pd_interplanetary_settlers_start_effects: "- $INITIAL_POPS$ §G+6§!$NEW_LINE$- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_industrial_district', £district£ $district_industrial_plural$]: §G+1§!$TABBED_NEW_LINE$- ['concept_pd_network_hub', $d_pd_solar_system_network_hub$]$NEW_LINE$- Homeworld's Moon:$TABBED_NEW_LINE$- ['concept_pd_moonbase', $pd_domed_base_0$]$NEW_LINE$- Colony:$TABBED_NEW_LINE$- ['concept_pd_domed_colony', $pd_domed_colony_0$]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_tech_pd_domed_colonies', £engineering£ $tech_pd_domed_colonies$]"
  pd_interplanetary_system_initializer_NAME:0 "Random Domed System"
  pd_interplanetary_system_initializer_DESC:0 "Random start system with one Domed Colony and one Domed Base."
  pd_interplanetary_sol_system_initializer_NAME:0 "Sol Domed System"
  pd_interplanetary_sol_system_initializer_DESC:0 "Sol start system with one Domed Colony and one Domed Base."
+
+#Concepts
+ concept_pd_network_hub: "$d_pd_solar_system_network_hub$"
+ concept_pd_network_hub_desc: "Grants numerous jobs based on capital level and constructed ['concept_pd_moonbases', Domed Bases] in the solar system.\n\n§L$d_pd_solar_system_network_hub_desc$§!"
+ concept_pd_moonbase: "Domed Bases"
+ concept_pd_moonbase_desc: "These bases connect to any §Y$d_pd_solar_system_network_hub$§! in the system, granting those planets extra jobs.\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
+ concept_pd_domed_colony: "Domed Colonies"
+ concept_pd_domed_colony_desc: "Built on planets with the §Y$terraforming_candidate$§! modifier which allow pre-terraforming colonization.\n\n§L$pd_domed_colony_0_MEGASTRUCTURE_DETAILS$§!"
+ concept_tech_pd_domed_colonies: "$tech_pd_domed_colonies$"
+ concept_tech_pd_domed_colonies_desc: "$allow_domed_colonies$\n\n§L$tech_pd_domed_colonies_desc$§!"
