--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -5235,7 +5235,7 @@ snowball_earth.11.name:0 "The First Thaw"
  #Sulfur Springs
  origin_pd_sulfur_springs:0 "Sulfur Springs"
  origin_pd_sulfur_springs_desc:0 "This civilization evolved on a hot Sulfur World, with its rich hot springs to bathe in and generate energy."
- origin_pd_sulfur_springs_effects:0 "- Homeworld is a §H$pc_sulfur$§!.\n- Unable to normally terraform most planets to §YSulfur Worlds§! without the §YSulfur Shaper§! Perk.\n- On §HSulfur Worlds§!, §HEnergy Districts§! are uncapped and £job_technician£ §Y$job_technician_plural$§! are replaced by £job_sulfur_tech£ §Y$job_sulfur_tech_plural$§! for organic races.\n- Gain access to the special Ascension Perk §YSulfur Terraforming§! which allows terraforming of some §YToxic Worlds§! into §YSulfur Worlds§!."
+ origin_pd_sulfur_springs_effects:0 "- Homeworld is a §H$pc_sulfur$§!.\n- Unable to normally terraform most planets to §YSulfur Worlds§! without the §YSulfur Shaper§! Perk.\n- On §HSulfur Worlds§!, §HEnergy Districts§! are uncapped and £job_technician£ §Y$job_technician_plural$§! are replaced by £job_sulfur_tech£ §Y$job_sulfur_tech_plural$§! for organic races."
  job_sulfur_tech:0 "Sulfur Spring Technician"
  job_sulfur_tech_plural:0 "Sulfur Spring Technicians"
  job_sulfur_tech_desc:0 "These technicians maintain the hot spring pool network on this planet, facilitating the rejuvenating pools for the population."
