--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -152,7 +152,7 @@
  pddomebases.100.factory: "Factory Moon Base"
  pddomebases.100.factory.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetArtisanIcon] [GetArtisanPlural] on connected colonies."
  pddomebases.100.foundry: "Foundry Moon Base"
- pddomebases.100.foundry.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [£job_foundry£ §Y[GetAlloyProducerPlural]§!] on connected colonies."
+ pddomebases.100.foundry.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [£job_foundry£ §Y[GetAlloyProducerPlural]§! on connected colonies."
  pddomebases.100.admin: "Administrative Moon Base"
  pddomebases.100.admin.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetAdministratorWithIcon] on connected colonies."
  pddomebases.100.priest: "Ecclesiastical Moon Base"
