--- a/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -38,10 +38,14 @@
  mod_job_pd_naval_admin_gestalt_add: "$job_pd_naval_admin_gestalt$ Job"
  mod_job_pd_naval_admin_gestalt_per_pop:0 "§G+1§! $job_pd_naval_admin_gestalt$ Job per $VALUE$ Pops"
  mod_job_pd_naval_admin_gestalt_per_pop_short:0 "\n§G+1§! £mod_job_pd_naval_admin_gestalt_add£ per $VALUE$ £pop£"
- job_pd_naval_admin_gestalt_effect_desc: "£job_pd_naval_admin_gestalt£ $job_pd_naval_gestalt_gestalt_plural$ improve naval efficiency by turning £minerals£ §Y$minerals$§! into £society£ §YResearch Points§!, £unity£ §Y$UNITY$§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
+ job_pd_naval_admin_gestalt_effect_desc: "£job_pd_naval_admin_gestalt£ $job_pd_naval_admin_gestalt_plural$ improve naval efficiency by turning £minerals£ §Y$minerals$§! into £society£ §YResearch Points§!, £unity£ §Y$UNITY$§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
 
 #Decisions
- decision_pd_garden_arcology_project: "Garden Arcology Project"
+ decision_pd_garden_arcology_project: "Arcology Project - Garden"
  decision_pd_garden_arcology_project_desc: "By weaving green spaces into the fabric of our arcologies, we can develop a sprawling ecumenopolis where nature and urbanity coexist harmoniously."
- decision_pd_garden_arcology_project_effects:1 "Turns the planet into an §Y$pc_city$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
- decision_pd_garden_arcology_project_effects_short:2 "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
+ decision_pd_garden_arcology_project_effects: "Turns the planet into an §Y$pc_city$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
+ decision_pd_garden_arcology_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
+ decision_pd_garden_arcology_project_relic: "Restore Ecumenopolis - Garden"
+ decision_pd_garden_arcology_project_relic_desc: "This planet was once a vibrant ecumenopolis. It would be a monumental task, but the planet could be rebuilt into a Garden Arcology"
+ decision_pd_garden_arcology_project_relic_effects: "$decision_pd_garden_arcology_project_effects$"
+ decision_pd_garden_arcology_project_relic_effects_short: "$decision_pd_garden_arcology_project_effects_short$"
