--- a/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -39,6 +39,21 @@
  mod_job_pd_naval_admin_gestalt_per_pop:0 "§G+1§! $job_pd_naval_admin_gestalt$ Job per $VALUE$ Pops"
  mod_job_pd_naval_admin_gestalt_per_pop_short:0 "\n§G+1§! £mod_job_pd_naval_admin_gestalt_add£ per $VALUE$ £pop£"
  job_pd_naval_admin_gestalt_effect_desc: "£job_pd_naval_admin_gestalt£ $job_pd_naval_admin_gestalt_plural$ improve naval efficiency by turning £minerals£ §Y$minerals$§! into £society£ §YResearch Points§!, £unity£ §Y$UNITY$§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
+ job_pd_capital_bio_politician:0 "Bio-Delegates"
+ job_pd_capital_bio_politician_plural:0 "Bio-Delegate"
+ job_pd_capital_bio_politician_desc:0 "Certain Bio-Trophies exhibit higher satisfaction when they perceive themselves as more important than others. This appearance of a dominant position positively influence their morale and happiness for all."
+ mod_job_pd_capital_bio_politician_add:0 "$job_pd_capital_bio_politician$ Jobs"
+ mod_job_pd_capital_bio_politician_per_pop:0 "§G+1§! $job_pd_capital_bio_politician$ Job per $VALUE$ Pops"
+ mod_job_pd_capital_bio_politician_per_pop_short:0 "\n§G+1§! £mod_job_pd_capital_bio_politician_add£ per $VALUE$ £pop£"
+ job_pd_capital_bio_effect_desc:0 "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§! and increase §Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!"
+
+#Buildings
+ building_pd_rogue_council:0 "Bio-Trophy Council"
+ building_pd_rogue_council_desc:0 "Placing select Bio-Trophies in leadership roles satisfies their intrinsic social hierarchy needs, with intentionally engineered 'political deadlock' creating an illusion of conflict. This strategy frees drones to focus on enhancing Bio-Trophies' care and satisfaction."
+ building_navel_base:0 "Naval Office"
+ building_navel_base_desc:0 "An interstellar bastion, this planetary military base is a pivotal support hub for our fleets."
+ building_navel_command:0 "Naval Command Centre"
+ building_navel_command_desc:0 "A colossal command fortress, this military complex serves as a nerve center for the strategic administration of our interstellar armadas."
 
 #Decisions
  decision_pd_garden_arcology_project: "Arcology Project - Garden"
@@ -49,3 +64,19 @@
  decision_pd_garden_arcology_project_relic_desc: "This planet was once a vibrant ecumenopolis. It would be a monumental task, but the planet could be rebuilt into a Garden Arcology"
  decision_pd_garden_arcology_project_relic_effects: "$decision_pd_garden_arcology_project_effects$"
  decision_pd_garden_arcology_project_relic_effects_short: "$decision_pd_garden_arcology_project_effects_short$"
+ decision_pd_fortress_arcology_project: "Arcology Project - Fortress"
+ decision_pd_fortress_arcology_project_desc: "We can forge a formidable bastion by integrating fortified structures and advanced shielding around our arcologies."
+ decision_pd_fortress_arcology_project_effects: "Turns the planet into an §Y$pc_city$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
+ decision_pd_fortress_arcology_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
+ decision_pd_fortress_arcology_project_relic: "Restore Ecumenopolis - Fortress"
+ decision_pd_fortress_arcology_project_relic_desc: "This planet was once a vibrant ecumenopolis. It would be a monumental task, but the planet could be rebuilt into a Fortress Arcology"
+ decision_pd_fortress_arcology_project_relic_effects: "$decision_pd_fortress_arcology_project_effects$"
+ decision_pd_fortress_arcology_project_relic_effects_short: "$decision_pd_fortress_arcology_project_effects_short$"
+
+#Dummy Classes
+ pc_pd_fortress_city: "Dummy-Class, do not use."
+ pc_pd_fortress_city_desc: "Dummy-Class, do not use."
+ pc_pd_fortress_city_adj: "urban"
+ mod_pc_pd_fortress_city_habitability: "Dummy-Class, do not use."
+ trait_pc_pd_fortress_city_preference: "Dummy-Class, do not use."
+ trait_pc_pd_fortress_city_preference_desc: "Dummy-Class, do not use."
