--- a/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -5,8 +5,8 @@
  pd_garden_arcology_desc: "This ecumenopolis boasts vast expanses of meticulously curated and controlled gardens, creating vast green belts amidst urban sprawl."
  pd_fortress_arcology: "Fortress Arcology"
  pd_fortress_arcology_desc: "This ecumenopolis serves as a planet-wide military command center, replete with barracks, training facilities, and arms manufacturing plants."
- pd_trade_arcology: "Commerical Arcology"
- pd_trade_arcology_desc: "This ecumenopolis is an intergalactic trade nexus, filled with bustling marketplaces, vast commercial hubs, and extensive logistics infrastructure."
+ pd_commerical_arcology: "Commerical Arcology"
+ pd_commerical_arcology_desc: "This ecumenopolis is an intergalactic trade nexus, filled with bustling marketplaces, vast commercial hubs, and extensive logistics infrastructure."
 
 #Districts
  district_pd_arcology_research: "Research Arcology"
@@ -56,6 +56,7 @@
  building_navel_command_desc:0 "A colossal command fortress, this military complex serves as a nerve center for the strategic administration of our interstellar armadas."
 
 #Decisions
+ #Garden
  decision_pd_garden_arcology_project: "Arcology Project - Garden"
  decision_pd_garden_arcology_project_desc: "By weaving green spaces into the fabric of our arcologies, we can develop a sprawling ecumenopolis where nature and urbanity coexist harmoniously."
  decision_pd_garden_arcology_project_effects: "Turns the planet into an §Y$pc_city$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
@@ -64,6 +65,7 @@
  decision_pd_garden_arcology_project_relic_desc: "This planet was once a vibrant ecumenopolis. It would be a monumental task, but the planet could be rebuilt into a Garden Arcology"
  decision_pd_garden_arcology_project_relic_effects: "$decision_pd_garden_arcology_project_effects$"
  decision_pd_garden_arcology_project_relic_effects_short: "$decision_pd_garden_arcology_project_effects_short$"
+ #Fortress
  decision_pd_fortress_arcology_project: "Arcology Project - Fortress"
  decision_pd_fortress_arcology_project_desc: "We can forge a formidable bastion by integrating fortified structures and advanced shielding around our arcologies."
  decision_pd_fortress_arcology_project_effects: "Turns the planet into an §Y$pc_city$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
@@ -72,6 +74,15 @@
  decision_pd_fortress_arcology_project_relic_desc: "This planet was once a vibrant ecumenopolis. It would be a monumental task, but the planet could be rebuilt into a Fortress Arcology"
  decision_pd_fortress_arcology_project_relic_effects: "$decision_pd_fortress_arcology_project_effects$"
  decision_pd_fortress_arcology_project_relic_effects_short: "$decision_pd_fortress_arcology_project_effects_short$"
+ #Commerical
+ decision_pd_commerical_arcology_project: "Arcology Project - Commerical"
+ decision_pd_commerical_arcology_project_desc: "We can create a thriving hub of commerce by weaving marketplaces and trade networks in the very fabric of this arcology."
+ decision_pd_commerical_arcology_project_effects: "Turns the planet into an §Y$pc_city$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
+ decision_pd_commerical_arcology_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
+ decision_pd_commerical_arcology_project_relic: "Restore Ecumenopolis - Commerical"
+ decision_pd_commerical_arcology_project_relic_desc: "This planet was once a vibrant ecumenopolis. It would be a monumental task, but the planet could be rebuilt into a Commerical Arcology"
+ decision_pd_commerical_arcology_project_relic_effects: "$decision_pd_commerical_arcology_project_effects$"
+ decision_pd_commerical_arcology_project_relic_effects_short: "$decision_pd_commerical_arcology_project_effects_short$"
 
 #Dummy Classes
  pc_pd_fortress_city: "Dummy-Class, do not use."
@@ -80,3 +91,9 @@
  mod_pc_pd_fortress_city_habitability: "Dummy-Class, do not use."
  trait_pc_pd_fortress_city_preference: "Dummy-Class, do not use."
  trait_pc_pd_fortress_city_preference_desc: "Dummy-Class, do not use."
+ pc_pd_commerical_city: "Dummy-Class, do not use."
+ pc_pd_commerical_city_desc: "Dummy-Class, do not use."
+ pc_pd_commerical_city_adj: "Dummy-Class, do not use."
+ mod_pc_pd_commerical_city_habitability: "Dummy-Class, do not use."
+ trait_pc_pd_commerical_city_preference: "Dummy-Class, do not use."
+ trait_pc_pd_commerical_city_preference_desc: "Dummy-Class, do not use."
